--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,29 +19,16 @@
       </ion-card-content>
     </ion-card> 
 
-        <!-- <ion-card >
-            <ion-item>
-              <button ion-button block (click)="getPicture()">Toma una foto</button>
-              <img [src]="image" *ngIf="image" width="250" height="250" required/>  
-            </ion-item>
-            <ion-card-content>
-              <h3>
-                Descripcion
-              </h3>
-              <ion-item>
-                  <ion-textarea ng-model="string" name="description" placeholder="detalle aqui" required></ion-textarea>
-              </ion-item>
-                  <span>{{currentDate}}</span> 
-            </ion-card-content>
-          </ion-card> -->
-
           <!---Documento secundario----->
           <ion-card>
             <ion-item>
                 <button ion-button block (click)="takeSelfie()">Toma una foto</button>
-                <img [src]="image" *ngIf="image" required/>  
-            </ion-item>
+                <img [src]="image" *ngIf="image" required/>
+             </ion-item>
             <ion-list>
+              <!-- <ion-item>
+                  <ion-img width="80" height="80" src="https://firebasestorage.googleapis.com/v0/b/ionicreadqr.appspot.com/o/profilePictures%2Fuser1%2FprofilePicture.png?alt=media&token=76291106-231e-4df3-81e1-cac6ec4527d4"></ion-img>
+              </ion-item> -->
                 <ion-item>
                   <ion-label stacked>Descripcion</ion-label>
                   <ion-textarea [(ngModel)]="usuario.descripcion" placeholder="detalle aqui"></ion-textarea>
