--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,6 +11,16 @@
 </ion-header>
  
 <ion-content padding>
-<h2>hola mundo</h2>
+<h2>{{DateProperty}}</h2>
+
+<!-- muestra la fecha y hora -->
+<ion-item>
+  <ion-datetime displayFormat="MMM DD, h:mm A" [(ngModel)]="myDate"></ion-datetime>
+</ion-item>
+<!-- Fin muestra la fecha y hora -->
+
+<ion-fab right bottom>
+  <button ion-fab color="light" (click)="navegarALugar()"><ion-icon name="add"></ion-icon></button>
+</ion-fab>
  
 </ion-content>
