--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,44 +4,29 @@
         <ion-avatar item-start>
             <ion-icon name="contact"></ion-icon>
         </ion-avatar>
+        <h3>Bienvenido: </h3>
         <h2>Marty McFly</h2>
-        <p>November 5, 1955</p>
       </ion-item>
   </ion-navbar>
 </ion-header>
  
 <ion-content padding>
 
-  <!-- data de operaciones -->
-    <ion-item>
-        <ion-label item-start>Operaciones: </ion-label>
-        <ion-badge item-end>50</ion-badge>
-        <ion-label item-center>{{DateProperty}}</ion-label>
-    </ion-item>
-
-<!-- muestra la fecha y hora -->
-<ion-item>
-  <ion-datetime displayFormat="MMM DD, h:mm A" [(ngModel)]="myDate"></ion-datetime>
-</ion-item>
-<!-- Fin muestra la fecha y hora -->
-
 <!-- lista de detalles desde lugar -->
 <ion-list>
-    <ion-item-sliding *ngFor="let lugar of lugares">
-      <ion-item>
-          <ion-thumbnail item-start>
+    <ion-item-sliding>
+      <ion-item *ngFor="let item of employees | async">
+        <ion-avatar item-start>
           <img src="img/slimer.png">
-          </ion-thumbnail>
-          <h2>{{lugar.codeQR}}</h2>
-          <p>{{lugar.fechaActual}}</p>
-          <h3>{{lugar.descripcion}}</h3>
+        </ion-avatar>
+        <h3>{{item.name}}</h3>
+        <h3>{{item.lname}}</h3>
+        <h3>{{item.age}}</h3>
+        <h3>{{item.dept}}</h3>
       </ion-item>
-
-      <!-- borrado de datos en el home -->
       <ion-item-options side="right">
-        <button ion-button color="danger">
-          <!-- Advanced: explicity set the icon for each platform -->
-          <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
+        <button ion-button color="red">
+            <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
           Delete
         </button>
       </ion-item-options>
