--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,14 +13,14 @@
 <ion-content padding>
 
     <ion-list>
-        <ion-item-sliding *ngFor="let lugar of lugares">
-          <ion-item>
+        <ion-item-sliding>
+          <ion-item *ngFor="let item of lugares">
             <ion-avatar item-start>
               <img src="img/slimer.png">
             </ion-avatar>
-            <h2>{{lugar.nombre}}</h2>
-            <h2>{{lugar.direccion}}</h2>
-            <h2>{{lugar.categoria}}</h2>
+            <h2>{{item.nombre}}</h2>
+            <h2>{{item.direccion}}</h2>
+            <h2>{{item.categoria}}</h2>
           </ion-item>
           <ion-item-options side="right">
             <button ion-button color="danger" (click)="deleteLugar(lugar)">
