--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,16 +14,17 @@
 
     <ion-list>
         <ion-item-sliding>
-          <ion-item *ngFor="let item of lugares">
+          <ion-item *ngFor="let item of lugares | async json">
             <ion-avatar item-start>
               <img src="img/slimer.png">
             </ion-avatar>
             <h2>{{item.nombre}}</h2>
             <h2>{{item.direccion}}</h2>
             <h2>{{item.categoria}}</h2>
+            <!-- <p>{{item.id}}</p> -->
           </ion-item>
           <ion-item-options side="right">
-            <button ion-button color="danger" (click)="deleteLugar(lugar)">
+            <button ion-button color="danger" (click)="deleteLugar()">
                 <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
               Delete
             </button>
