Envio de qr a firebase

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,7 +25,7 @@
             <h2>{{item.nombre}}</h2>
             <h2>{{item.direccion}}</h2>
             <h2>{{item.categoria}}</h2>
-            <p>photo name: {{item.image}}</p>
+            <!-- <p>photo name: {{item.image}}</p> -->
           </ion-item>
           <ion-item-options side="right">
             <button ion-button color="danger" (click)="delete(item.$key)">
