--- a/src/pages/lugar/lugar.html
+++ b/src/pages/lugar/lugar.html
@@ -24,8 +24,13 @@
 
         <ion-item>
           <h3>formato: {{data.format}}</h3>
-          <h3>text: {{data.text}}</h3>
+          <!-- <h3>text: {{data.text}}</h3> -->
         </ion-item>
+
+        <ion-item>
+            <!-- <h3>formato: {{data.format}}</h3> -->
+            <h3>text: {{data.text}}</h3>
+          </ion-item>
         
         <ion-item>
           <ion-label floating>Nombre</ion-label>
