--- a/src/pages/lugar/lugar.html
+++ b/src/pages/lugar/lugar.html
@@ -33,17 +33,17 @@
           </ion-item>
         
         <ion-item>
-          <ion-label floating>Nombre</ion-label>
+          <ion-label floating>Detalle</ion-label>
           <ion-input type="text" [(ngModel)]="nombre"></ion-input>
         </ion-item>
       
         <ion-item>
           <ion-label floating>Direccion</ion-label>
           <ion-input type="text" [(ngModel)]="direccion"></ion-input>
-        </ion-item>
+        </ion-item> 
 
         <ion-item>
-          <ion-label floating>Categoria</ion-label>
+          <ion-label floating>Descripcion</ion-label>
           <ion-input type="text" [(ngModel)]="categoria"></ion-input>
         </ion-item>
 
