--- a/src/pages/lugar/lugar.html
+++ b/src/pages/lugar/lugar.html
@@ -37,10 +37,10 @@
           <ion-input type="text" [(ngModel)]="nombre"></ion-input>
         </ion-item>
       
-        <ion-item>
+        <!-- <ion-item>
           <ion-label floating>Direccion</ion-label>
           <ion-input type="text" [(ngModel)]="direccion"></ion-input>
-        </ion-item> 
+        </ion-item>  -->
 
         <ion-item>
           <ion-label floating>Descripcion</ion-label>
