--- a/src/pages/lugar/lugar.html
+++ b/src/pages/lugar/lugar.html
@@ -37,14 +37,9 @@
           <ion-input type="text" [(ngModel)]="nombre"></ion-input>
         </ion-item>
       
-        <!-- <ion-item>
-          <ion-label floating>Direccion</ion-label>
-          <ion-input type="text" [(ngModel)]="direccion"></ion-input>
-        </ion-item>  -->
-
         <ion-item>
           <ion-label floating>Descripcion</ion-label>
-          <ion-input type="text" [(ngModel)]="categoria"></ion-input>
+          <ion-textarea type="text" [(ngModel)]="categoria"></ion-textarea>
         </ion-item>
 
         <ion-item>
