--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,6 +24,7 @@
             <h4>{{item.barcodeData.text}}</h4>  <!--trae la data de barcodedata -->
             <h4>{{item.nombre}}</h4>
             <h4>{{item.categoria}}</h4>
+            <h4>{{item.date}}</h4>
           </ion-item>
           <ion-item-options side="right">
             <button ion-button color="danger" (click)="delete(item.$key)">
